# rapier-avbd

./: AGENTS.md  ARCHITECTURE.md  BENCHMARK_README.md  BUILD_AND_MCP_GUIDE.md  BUILD_PIPELINE_PLAN.md  Cargo.toml  JS_BUILD_README.md  MCP_SETUP.md  README.md  ROADMAP.md  WASM_API_REFERENCE.md  build_all.sh  build_js_with_avbd.md  build_wasm_quick.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  post_step1.md  post_step2.md  post_step3.md  post_step4.md  post_step5.md  pre_step1.md  pre_step2.md  pre_step3.md  pre_step4.md  pre_step5.md  test_wasm_avbd.html
.cargo/: config.toml
assets/: avbd_three_demo.html  package.json
benchmarks3d/: scoreboard.json
crates/rapier2d/: Cargo.toml
crates/rapier2d-f64/: Cargo.toml
crates/rapier3d/: Cargo.toml
crates/rapier3d-f64/: Cargo.toml
crates/rapier_testbed2d/: Cargo.toml
crates/rapier_testbed2d-f64/: Cargo.toml
crates/rapier_testbed3d-f64/: Cargo.toml
docs/: avbd_constraint_catalog.md  avbd_math_brief.md  avbd_per_body_solve.md
llm_digests/: avbd_2d_demo_digest.txt  avbd_discussion1_digest.txt  avbd_houdini_impl_git_repo_digest.txt  avbd_houdini_impl_post_digest.txt  avbd_paper_pdf_digest.txt  first_attempt_caveats_digest.txt  gpt5_discussion_digest.txt  rapier_digest.txt
rapier-wasm-avbd/: Cargo.toml
rapier-wasm-avbd/src/: lib.rs
scripts/: build-avbd-demo.sh  publish-rapier.sh  run-avbd-ci.sh
src/dynamics/: mod.rs  (+1 more)
src_testbed/: ui.rs
threlte_preview/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vite.config.ts
tools/solver-bench/: Cargo.toml
tools/solver-bench/src/: main.rs
(+42 files in other folders)
